test: improve unit tests